--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
-
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://localhost:* http://localhost:*;
-        style-src 'self' 'unsafe-inline';
-        img-src 'self' data: blob: https: http:;
-        font-src 'self' data:;
-        connect-src 'self' https://*.supabase.co wss://*.supabase.co http://localhost:* https://localhost:* ws://localhost:*;
-        frame-src 'none';
-        object-src 'none';
-        base-uri 'self';
-      ">
-      <title>AI Tools Platform - Discover & Compare AI Tools</title>
-    </head>
-
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://localhost:* http://localhost:*;
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: blob: https: http:;
+      font-src 'self' data:;
+      connect-src 'self' https://*.supabase.co wss://*.supabase.co http://localhost:* https://localhost:* ws://localhost:*;
+      frame-src 'none';
+      object-src 'none';
+      base-uri 'self';
+    ">
+    <title>Aitoologist - Discover & Compare AI Tools</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
